--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "emergency-board-light",
+  "name": "emergency-board",
   "version": "1.0.0",
   "main": "emergency-board-light.js",
   "scripts": {
     "start": "node emergency-board-light.js"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "body-parser": "^1.20.2"
   }
 }
